--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,9 +1,9 @@
 #monitor=,preferred,auto,auto
 
-monitor=DP-3, 1920x1080, 0x0, 1
-monitor=DP-5, 1680x1050,1920x0,1
-#monitor=DP-2,1920x1200,120x0,1
-monitor=eDP-1,1920x1080@60,0x1080,1
+monitor=DP-3, 1920x1080,     0x120    , 1
+monitor=DP-5, 1680x1050,  1920x120    , 1
+monitor=DP-2, 1920x1200,     0x0      , 1
+monitor=eDP-1,1920x1080@60,  0x1200   , 1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
