--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -139,7 +139,7 @@ submap = rst
 bind = ,E,exec,systemctl restart --user emacs
 bind = ,E,submap,reset
 submap = reset
-
+bind = $mainMod SHIFT, p, exec, grim -g "$(slurp)"  $(xdg-user-dir PICTURES)/Screenshots/$(date +'%s.png')
 
 # Brightness ctl
 bind = ,XF86MonBrightnessDown, exec, brightnessctl set -5%
