--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,7 +1,15 @@
 preload = /home/simon/Pictures/backgrounds/rain.jpg
-wallpaper = eDP-1, /home/simon/Pictures/backgrounds/rain.jpg
-wallpaper = DP-3, /home/simon/Pictures/backgrounds/rain.jpg
-wallpaper = DP-2, /home/simon/Pictures/backgrounds/rain.jpg
-wallpaper = DP-5, /home/simon/Pictures/backgrounds/rain.jpg
+
+wallpaper = eDP-1,    /home/simon/Pictures/backgrounds/rain.jpg
+wallpaper = DP-1,     /home/simon/Pictures/backgrounds/rain.jpg
+wallpaper = DP-2,     /home/simon/Pictures/backgrounds/rain.jpg
+wallpaper = DP-3,     /home/simon/Pictures/backgrounds/rain.jpg
+wallpaper = DP-4,     /home/simon/Pictures/backgrounds/rain.jpg
+wallpaper = DP-5,     /home/simon/Pictures/backgrounds/rain.jpg
+wallpaper = DP-6,     /home/simon/Pictures/backgrounds/rain.jpg
+wallpaper = DP-7,     /home/simon/Pictures/backgrounds/rain.jpg
+wallpaper = DP-8,     /home/simon/Pictures/backgrounds/rain.jpg
+wallpaper = HDMI-A-1, /home/simon/Pictures/backgrounds/rain.jpg
+
 ipc = off
-splash = true
+splash = false
