--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,13 +1,18 @@
 #monitor=,preferred,auto,auto
 
 monitor=DP-3, 1920x1080,     0x120    , 1
+monitor=HDMI-A-1, 1920x1080,     0x120    , 1
 monitor=DP-5, 1680x1050,  1920x120    , 1
-monitor=DP-2, 1920x1200,     0x0      , 1
+monitor=DP-4, 1920x1080,     0x120    , 1
+monitor=DP-7, 1680x1050,  1920x120    , 1
+monitor=DP-1, 1920x1200,     0x0      , 1
 monitor=eDP-1,    1920x1080@60,  0x1200   , 1
-#monitor=HDMI-A-1, 1920x1080,     0x0       , 1
+monitor=HDMI-A-1, 1920x1080@60,     0x120       , 1
 
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+misc {
+  disable_hyprland_logo = true
+  disable_splash_rendering = true
+}
 
 # Execute your favorite apps at launch
 exec-once = waybar & hyprpaper
@@ -51,15 +56,15 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
-
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 5
     col.shadow = rgba(1a1a1aee)
+    blur {
+   	enabled = true
+	size = 4
+	passes = 2
+    }
 }
 
 animations {
@@ -104,7 +109,8 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
+# For emacs capture
+# windowrule = float,title:^capture$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -112,7 +118,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 #
 bind = $mainMod SHIFT, Q, exec, hyprctl dispatch exit
-bind = $mainMod SHIFT, return, exec, kitty 
+bind = $mainMod SHIFT, return, exec, terminator
 bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod SHIFT, C, killactive, 
 bind = $mainMod, M, exit, 
@@ -121,6 +127,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, g, exec, emacsclient -c -F '((title . "capture") (floating . t))' -e '(org-capture)'
+bind = $mainMod, a, exec, emacsclient -c -e "(progn (org-agenda nil \"g\") (delete-other-windows))"
 
 bind = $mainMod,O,submap,opn
 submap = opn
